--- a/src/public/01-timer.html
+++ b/src/public/01-timer.html
@@ -1,1 +1,43 @@
-i am the timer, hopefully
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Timer</title>
+        <link rel="stylesheet" href="/css/styles.css" />
+    </head>
+    <body>
+        <div class="main-container">
+            <section class="intro-text">
+                <a href="./index.html" class="go-home trans-link">Go to home</a>
+                <h1>Timer</h1>
+                <p>Select a date</p>
+            </section>
+            <section class="timer-module">
+                <input type="text" id="datetime-picker" />
+                <button type="button" data-start>Start</button>
+
+                <div class="timer">
+                    <div class="field">
+                        <span class="value" data-days>00</span>
+                        <span class="label">Days</span>
+                    </div>
+                    <div class="field">
+                        <span class="value" data-hours>00</span>
+                        <span class="label">Hours</span>
+                    </div>
+                    <div class="field">
+                        <span class="value" data-minutes>00</span>
+                        <span class="label">Minutes</span>
+                    </div>
+                    <div class="field">
+                        <span class="value" data-seconds>00</span>
+                        <span class="label">Seconds</span>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </body>
+</html>
