--- a/src/public/02-snackbar.html
+++ b/src/public/02-snackbar.html
@@ -1,1 +1,21 @@
-i am the snackbar, hopefully
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Timer</title>
+        <link rel="stylesheet" href="/css/styles.css" />
+    </head>
+    <body>
+        <div class="main-container">
+            <section class="intro-text">
+                <a href="./index.html" class="go-home trans-link">Go to home</a>
+                <h1>Snackbar</h1>
+                <p>Select delay and create sum notifs bozo</p>
+            </section>
+            <section class="snackbar-module"></section>
+        </div>
+    </body>
+</html>
