--- a/src/public/01-timer.html
+++ b/src/public/01-timer.html
@@ -13,7 +13,7 @@
             <div class="go-home-wrapper">
                 <a href="./index.html" class="go-home trans-link">Go to home</a>
             </div>
-            <section class="intro-text">
+            <section class="intro-text-timer">
                 <h1>Timer</h1>
                 <p>Select a date</p>
             </section>
