--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GOIT-JS-HW-10 (fochtified)</title>
-        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
-        <load ="../partials/header.html" />
+        <load ="partials/header.html" />
 
         <section>
             <div class="main-container">
@@ -17,14 +17,14 @@
                 <!-- Path to images as from index.html file -->
                 <img
                     alt="JavaScript"
-                    class="import-img trans-js"
-                    data-src="/img/javascript.svg"
+                    class="trans-js"
+                    src="./img/javascript.svg"
                 />
             </div>
         </section>
 
         <!-- Loads the specified .html file -->
 
-        <script type="module" src="/js/main.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
