--- a/src/public/02-snackbar.html
+++ b/src/public/02-snackbar.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Timer</title>
-        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
         <div class="main-container">
@@ -57,7 +57,7 @@
                 </form>
             </section>
         </div>
-        <script type="module" src="/js/main.js"></script>
-        <script type="module" src="/js/02-snackbar.js"></script>
+        <script type="module" src="./js/main.js"></script>
+        <script type="module" src="./js/02-snackbar.js"></script>
     </body>
 </html>
