--- a/src/02-snackbar.html
+++ b/src/02-snackbar.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Timer</title>
+        <title>Snackbar</title>
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
