--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GOIT-JS-HW-10 (fochtified)</title>
         
-      <script type="module" crossorigin src="/goit-js-hw-10/assets/main-9a343766.js"></script>
+      <script type="module" crossorigin src="/goit-js-hw-10/assets/main-4f0f13e7.js"></script>
       <link rel="stylesheet" href="/goit-js-hw-10/assets/main-9556d6c5.css">
     </head>
     <body>
@@ -34,8 +34,8 @@
                 <!-- Path to images as from index.html file -->
                 <img
                     alt="JavaScript"
-                    class="import-img trans-js"
-                    data-src="/img/javascript.svg"
+                    class="trans-js"
+                    src="/goit-js-hw-10/assets/javascript-8dac5379.svg"
                 />
             </div>
         </section>
