--- a/02-snackbar.html
+++ b/02-snackbar.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="icon" type="image/svg+xml" href="/goit-js-hw-10/assets/favicon-4a748afd.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Timer</title>
+        <title>Snackbar</title>
         
       <script type="module" crossorigin src="/goit-js-hw-10/commonHelpers2.js"></script>
-      <link rel="modulepreload" crossorigin href="/goit-js-hw-10/assets/main-9a343766.js">
+      <link rel="modulepreload" crossorigin href="/goit-js-hw-10/assets/main-4f0f13e7.js">
       <link rel="modulepreload" crossorigin href="/goit-js-hw-10/assets/vendor-77e16229.js">
       <link rel="stylesheet" href="/goit-js-hw-10/assets/main-9556d6c5.css">
       <link rel="stylesheet" href="/goit-js-hw-10/assets/vendor-7a007824.css">
